Ad changes and index rewrite

--- a/src/pages/advertiser-index.mdx
+++ b/src/pages/advertiser-index.mdx
@@ -16,12 +16,8 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [Fort Stockton CVB](http://historicfortstocktontx.com/)
 
-[Visit Big Bend - Brewster County Tourism Council](https://visitbigbend.com/)
-
 
 ## Gulf Coast
-
-[Baytown, City of](https://www.visitbaytown.com/)
 
 [Beaumont CVB](https://www.beaumontcvb.com/)
 
@@ -29,57 +25,61 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [City of Alvin](https://visitalvin.com/)
 
-[Corpus Christi CVB](https://visitcorpuschristitx.org)
+[City of Baytown](https://www.visitbaytown.com/)
 
-[Cove Harbor Coach Resort](https://www.coveharborrv.com)
+[City of Deer Park](http://visit.deerparktx.org/)
 
-[Deer Park, City of ](http://visit.deerparktx.org/)
+[City of Harlingen CVB](https://visitharlingentexas.com/)
 
-[Harlingen, City of, CVB](https://visitharlingentexas.com/)
+[City of Kingsville](https://kingsvilletexas.com/)
 
-[Kingsville, City of, Tourism Dept.](https://kingsvilletexas.com/)
+[City of La Porte](http://www.visitlaportetx.com/)
 
-[La Porte, City of](http://www.visitlaportetx.com/)
+[City of League City](https://www.leaguecitycvb.com/)
 
-[League City, City of](https://www.leaguecitycvb.com/)
+[City of Port Isabel](https://portisabel-texas.com/blog/)
 
-[Pearland CVB](http://visitpearland.com/birding)
+[City of Portland](https://www.portlandtx.com/)
+
+[City of Webster](https://www.spacecoasttexas.com/)
+
+[Houston First](https://www.visithoustontexas.com/)
 
 [Port Aransas/Mustang Island](https://visitportaransas.com)
 
-[Port Isabel, City of ](https://portisabel-texas.com/blog/)
+[Port Arthur CVB](https://visitportarthurtx.com/blog/6-reasons-to-road-trip-to-port-arthur-in-2022/)
 
 [South Padre Island CVB](https://www.sopadre.com/)
 
 [Victoria CVB](https://www.explorevictoriatexas.com/)
 
-[Visit Bay City ](https://visitbaycitytx.com/)
+[Visit Bay City](https://visitbaycitytx.com/)
 
-[Webster, City of](https://www.spacecoasttexas.com/)
+[Visit Pearland](http://visitpearland.com/birding)
 
 ## Hill Country
-
-[Austin Parks &amp; Recreation, City of](https://austintexas.gov/historicatxparks)
 
 [Bandera County CVB](https://www.banderacowboycapital.com/)
 
 [Blanco Chamber of Commerce](https://www.visitblancotexas.com/)
 
+[Blanton Museum of Art](https://blantonmuseum.org/)
+
 [Bullock Texas State History Museum](https://www.thestoryoftexas.com/)
 
 [Cedar Park, City of](https://cedarparkfun.com/)
 
-[Comfort Chamber of Commerce](https://www.comfortchamber.com/)
+[City of Kyle](https://www.cityofkyle.com/)
 
 [Fredericksburg CVB](https://www.visitfredericksburgtx.com/)
 
 [Georgetown CVB](https://visit.georgetown.org/)
 
+[Go Round Rock](https://goroundrock.com/)
+
 [Kerrville CVB](https://www.kerrvilletexascvb.com/)
 
-[Marble Falls/Lake LBJ Chamber of Commerce & CVB](https://visitmarblefalls.org)
-
-[Round Rock CVB](https://goroundrock.com)
+[Uvalde County](https://www.visituvaldecounty.com/)
 
 ## Panhandle Plains
 
@@ -87,19 +87,15 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [Amarillo CVB](https://www.visitamarillo.com/)
 
-[Andrews Chamber of Commerce & CVB](https://wildwildwestfest.com/)
-
-[Big Spring CVB](http://www.visitbigspring.com)
-
-[Dalhart Area Chamber of Commerce & Visitors Center](https://www.facebook.com/dalhartchamber/)
-
 [Dumas Moore County Chamber of Commerce](https://dumaschamber.com/)
 
 [Panhandle-Plains Historical Museum ](https://www.panhandleplains.org/)
 
-[Red River Valley Museum](https://www.rrvmuseum.org/)
-
 [San Angelo CVB](https://www.discoversanangelo.com/)
+
+[Texas OUTDOOR Musical](https://www.texas-show.com/)
+
+[Visit Big Spring](http://www.visitbigspring.com)
 
 [Visit Lubbock](https://visitlubbock.org/)
 
@@ -109,55 +105,57 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 ## Piney Woods
 
-[City of Mineola](https://VisitMineola.com)
+[City of Mineola, TX](https://VisitMineola.com)
 
 [Henderson, City of](http://www.visithendersontx.com/)
 
 [Huntsville, City of](http://huntsvilletexas.com/)
 
-[Longview, City of, Tourism](https://www.visitlongviewtexas.com/)
-
-[Marshall, City of, Visit Marshall](http://visitmarshalltexas.com/)
+[Nacogdoches CVB](https://www.visitnacogdoches.org/)
 
 [Palestine Visitors Center](https://www.visitpalestine.com/)
 
 [Shenandoah CVB](https://www.visitshenandoahtx.com/)
 
-[Texarkana Chamber of Commerce](https://www.texarkana.org/)
-
-[The Woodlands CVB](https://www.visitthewoodlands.com/choose-your-adventure/#utm_source=Texas-St-Travel-Guide-2021&utm_medium=print&utm_campaign=leisure)
-
 [Visit Conroe CVB](https://visitconroe.com)
 
 [Visit Kilgore](https://visitkilgore.com/)
+
+[Visit Longview](https://www.visitlongviewtexas.com/)
+
+[Visit Marshall](http://visitmarshalltexas.com/)
+
+[Visit The Woodlands](https://visitthewoodlands.com/play)
 
 [Visit Tyler](https://visittyler.com/)
 
 ## Prairies and Lakes
 
+[Arlington CVB](https://www.arlington.org/)
+
 [Cameron Park Zoo](https://www.cameronparkzoo.com/)
 
-[Canton Visitors Bureau, City of](https://www.firstmondaycanton.com/)
+[Canton Visitors Bureau](https://www.firstmondaycanton.com/)
 
-[Celina Economic Development Corporation](https://www.lifeincelinatx.com/)
+[City of Gonzales](https://tourgonzales.com/)
 
-[City of Frisco, Visit Frisco](https://www.visitfrisco.com/)
+[City of Grand Prairie](https://www.visitgrandprairietx.com/)
 
 [Cleburne Chamber of Commerce](https://www.visitcleburne.com/)
 
+[Corsicana CVB](https://visitcorsicana.com/)
+
 [Cuero Chamber of Commerce, Agriculture & Visitors Bureau](https://cuero.org/)
 
-[Denton CVB](https://www.discoverdenton.com/)
+[Destination Bryan](https://www.destinationbryan.com/legends?utm_source=txtravelguide&utm_medium=digital&utm_campaign=legends)
 
-[George W. Bush Presidential Library and Museum](https://www.bushcenter.org/)
-
-[Glen Rose CVB](https://www.glenrosetexas.org/visitor/)
-
-[Gonzales, City of](https://www.gonzalestx.travel/)
+[Discover Denton](https://www.discoverdenton.com/)
 
 [Grapevine CVB](https://www.grapevinetexasusa.com/)
 
 [Greenville CVB](http://www.ci.greenville.tx.us/1088/Visit)
+
+[Heritage Farmstead Museum](https://www.heritagefarmstead.org/)
 
 [Irving Arts Center](https://www.irvingartscenter.com/)
 
@@ -169,11 +167,15 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [Mesquite CVB](https://www.visitmesquitetx.com/MudPies)
 
-[Nacogdoches CVB](https://www.visitnacogdoches.org/)
+[Nocona Chamber of Commerce](https://www.nocona.org/)
 
 [Paris CVB/Lamar County Chamber of Commerce](https://netexastrail.org/)
 
-[Rockdale, City of](http://rockdalecityhall.com/9/Visitors)
+[Somervell County Tourism](https://exploreglenrose.org/)
+
+[State Fair of Texas](https://bigtex.com/)
+
+[Terrell Chamber of Commerce & CVB](https://www.terrelltexas.com/)
 
 [The Colony CVB](https://visitthecolonytx.com/)
 
@@ -181,7 +183,9 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [Visit Cedar Hill Tx-Cedar Hill Tourism](https://www.visitcedarhilltx.com)
 
-[Visit College Station ](https://visit.cstx.gov)
+[Visit College Station](https://visit.cstx.gov)
+
+[Visit Frisco](https://www.visitfrisco.com/)
 
 [Visit Garland, Garland CVB ](http://cantresistgarland.com/)
 
@@ -189,29 +193,29 @@ featuredImage: 'https://travelguide.texashighways.com/images/featured/advertiser
 
 [Visit Plano, Plano CVB](https://www.visitplano.com/)
 
+[Visit The Colony](https://visitthecolonytx.com/)
+
 [Waco, City of, CVB](https://wacoheartoftexas.com/)
 
 [Weatherford Chamber of Commerce](https://www.experienceweatherford.com/)
 
 ## South Texas Plains
 
-[Balcones Heights, City of](http://sanantoniocentral.org)
-
-[Laredo CVB](https://www.visitlaredo.com/)
-
 [Natural Bridge Caverns, Inc](https://naturalbridgecaverns.com/)
 
 [Natural Bridge Wildlife Ranch ](https://www.wildliferanchtexas.com/)
 
-[San Antonio Visitor Alliance ](https://insanow.com/)
+[San Antonio Central - Balcones Heights](http://sanantoniocentral.org)
 
 [Visit San Antonio](https://www.visitsanantonio.com/)
 
-## Texas Travel Partners
+## Statewide
 
-[Texas Dept of Agriculture - Specialty  Crop Marketing](https://gotexan.org)
+[Texas Historical Commission](https://www.thc.texas.gov/historicsites)
 
-[Texas Parks & Wildlife ](https://www.TexasStateParks.org)
+[Texas Parks & Wildlife](https://www.TexasStateParks.org)
+
+[The Red Lion Hotels Family of Brands](https://www.redlion.com/)
 
 </Column>
 
