--- a/src/pages/quick-tour/index.mdx
+++ b/src/pages/quick-tour/index.mdx
@@ -199,7 +199,7 @@ The Texas Department of Transportation operates 12 travel information centers fo
 </Row>
     
 <Row>
-        <AdGroup id={['ad125','ad111','ad105','ad137','ad108','ad99','ad139','ad140']}/>    
+        <AdGroup id={['ad125','ad111','ad105','ad137','ad108','ad99','ad139','ad142', 'ad140']}/>    
 </Row>
 
 <Row>
