--- a/src/pages/regions/prairies-and-lakes.mdx
+++ b/src/pages/regions/prairies-and-lakes.mdx
@@ -17,7 +17,7 @@ From fast-moving rides to slow-moving experiences, the heartland of Texas offers
 
 </PageDescription>
 
-<AdGroup id={['ad134', 'ad111', 'ad108', 'ad140', 'ad139']}/>
+<AdGroup id={['ad134', 'ad111', 'ad142', 'ad108', 'ad140', 'ad139']}/>
 
 <Row>
 
@@ -97,7 +97,7 @@ For more information, directions, and amenities, get your [free mobile guide to 
 
 </Row>
 
-<AdGroup id={['ad134','ad111','ad108', 'ad140','ad139','ad97','ad104','ad126','ad127']}/>
+<AdGroup id={['ad134','ad111','ad108', 'ad140','ad139','ad141','ad97','ad104','ad126','ad127']}/>
 
 <Row>
 <Column colSm={12} colMd={4} colLg={8}>
