--- a/src/pages/road-trips/mural-trail.mdx
+++ b/src/pages/road-trips/mural-trail.mdx
@@ -18,6 +18,8 @@ Murals in El Segundo Barrio highlight Chicano culture
 
 **By Michael Hurd**
 
+<AdGroup id={['ad142']}/>
+
 <Row>
 
 <Column colSm={12} colMd={3} colLg={4}>
