updated ads to include latecomers

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -39,5 +39,5 @@ The photos are the work of Bowie-based photographer Dave Shafer. More of his pho
 </Row>
 
 <Row>
-    <AdGroup id={['ad04','ad17']}/>
+    <AdGroup id={['ad04','ad17','ad26']}/>
 </Row>
