--- a/src/pages/regions/hill-country.mdx
+++ b/src/pages/regions/hill-country.mdx
@@ -17,7 +17,7 @@ A bucolic landscape rich with cultural and natural attractions reflects Texas’
 
 </PageDescription>
 
-<AdGroup id={['ad17']}/>
+<AdGroup id={['ad08','ad17']}/>
 
 <Row>
 
