--- a/src/pages/regions/prairies-and-lakes.mdx
+++ b/src/pages/regions/prairies-and-lakes.mdx
@@ -17,7 +17,7 @@ From fast-moving rides to slow-moving experiences, the heartland of Texas offers
 
 </PageDescription>
 
-<AdGroup id={['ad27', 'ad31']}/>
+<AdGroup id={['ad26', 'ad27', 'ad31']}/>
 
 <Row>
 
@@ -199,7 +199,7 @@ Halfway between Dallas and Houston on I-45, quiet Fort Boggy offers a peaceful g
 
 <Row>
 <Column colSm={12} colMd={4} colLg={8}>
-<RegionListing title="Prairies and Lakes" color="teal" region="PRAIRIES AND LAKES" ads={['ad68', 'ad51', 'ad85', 'ad95', 'ad82']}/>
+<RegionListing title="Prairies and Lakes" color="teal" region="PRAIRIES AND LAKES" ads={['ad68', 'ad51', 'ad85', 'ad95', 'ad82', 'ad103','ad80']}/>
 </Column>
 
 <Column colSm={12} colMd={4} colLg={4}>
