Updated late ads 2/3/23

--- a/src/pages/regions/hill-country.mdx
+++ b/src/pages/regions/hill-country.mdx
@@ -184,7 +184,7 @@ Bring your hiking boots, water toys, camping gear, and a sense of adventure. Thi
 
 <Row>
 <Column colSm={6} colMd={4} colLg={8}>
-<RegionListing title="Hill Country" color="blue" region="HILL COUNTRY" ads={['ad44', 'ad77', 'ad94']}/>
+<RegionListing title="Hill Country" color="blue" region="HILL COUNTRY" ads={['ad44', 'ad77', 'ad94', 'ad50']}/>
 </Column>
 
 <Column colSm={6} colMd={4} colLg={4}>
