--- a/src/pages/regions/panhandle-plains.mdx
+++ b/src/pages/regions/panhandle-plains.mdx
@@ -51,6 +51,12 @@ The frontier era of San Angelo was infamous for its gambling halls, saloons fill
 
 <Row>
 
+<AdGroup id={['ad02']}/>
+
+</Row>
+
+<Row>
+
 <Column colSm={12} colMd={5} colLg={8}>
 
 ### See
