--- a/src/pages/regions/south-texas-plains.mdx
+++ b/src/pages/regions/south-texas-plains.mdx
@@ -51,6 +51,12 @@ Once known as the “City of Palms,” ­McAllen has reinvented itself time and 
 
 <Row>
 
+<AdGroup id={['ad29']}/>
+
+</Row>
+
+<Row>
+
 <Column colSm={12} colMd={5} colLg={8}>
 
 ### Stay
