--- a/src/pages/travel-information/index.mdx
+++ b/src/pages/travel-information/index.mdx
@@ -77,6 +77,10 @@ The Texas Department of Transportation operates 12 travel information centers fo
 </Row>
 
 <Row>
+    <AdGroup id={['ad02']}/>
+</Row>
+
+<Row>
 <Column colSm={12} colMd={4} colLg={8}>
 
 ![The Laredo Travel Information Center in Laredo, Texas](images/travel-information-orange-tic.jpg)
