--- a/src/pages/travel-texas/cajun-culture.mdx
+++ b/src/pages/travel-texas/cajun-culture.mdx
@@ -93,7 +93,7 @@ Bourque works at Big Doobie’s Boudin & Cracklins food truck in Port Arthur, wh
 
 </Row>
 
-<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21']}/>
+<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21', 'ad29']}/>
 
 <Row>
 
