--- a/src/pages/travel-texas/camping-101.mdx
+++ b/src/pages/travel-texas/camping-101.mdx
@@ -83,7 +83,7 @@ My old Houston friend Hans Hansen, now a business professor at Texas Tech Univer
 ![A group of hikers walk on a gravel trail with a large mountain in the background](images/travelguide-camping-hike-big-bend.jpg)
 <Caption>Big Bend National Park. Photo by Kenny Braun</Caption>
 
-<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21']}/>
+<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21', 'ad29']}/>
 
 <Row>
 
