--- a/src/pages/travel-texas/five-peaks.mdx
+++ b/src/pages/travel-texas/five-peaks.mdx
@@ -61,7 +61,7 @@ good luck.
 ![Two people walk along a rocky trail with a pink mountain sunrise behind](images/travelguide-franklin-mtns.jpg)
 <Caption>Franklin Mountains State Park. Photo by Brandon Jakobeit</Caption>
 
-<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21']}/>
+<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21', 'ad29']}/>
 
 <Row>
 
