--- a/src/pages/travel-texas/historical-travel.mdx
+++ b/src/pages/travel-texas/historical-travel.mdx
@@ -76,7 +76,7 @@ Smith’s reverence for the Bankhead is captured in a spiral-bound book he publi
 </Column>
 </Row>
 
-<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21']}/>
+<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21', 'ad29']}/>
 
 
 <Row>
