--- a/src/pages/travel-texas/mom-and-pop.mdx
+++ b/src/pages/travel-texas/mom-and-pop.mdx
@@ -66,7 +66,7 @@ _312 S. Commercial St., Coleman.
 ![The exterior of a marina on calm water beneath tall green trees](images/travelguide-johnson-ranch-marina.jpg)
 <Caption>Johnson’s Ranch Marina serves the East Texas village of Uncertain. Photo by Dave Shafer</Caption>
 
-<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21']}/>
+<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21', 'ad29']}/>
 
 <Row>
 
