--- a/src/pages/travel-texas/pets.mdx
+++ b/src/pages/travel-texas/pets.mdx
@@ -84,7 +84,7 @@ Sample from a complimentary wine tasting fresh from the source at Zin Valle Vine
 
 </Row>
 
-<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21']}/>
+<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21', 'ad29']}/>
 
 <Row>
 <Column colSm={12} colMd={4} colLg={8}>
