--- a/src/pages/travel-texas/wildflowers.mdx
+++ b/src/pages/travel-texas/wildflowers.mdx
@@ -92,7 +92,7 @@ Around the time spring wildflowers begin to dot the top of Texas, way down south
 
 </Row>
 
-<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21']}/>
+<AdGroup id={['ad15', 'ad27', 'ad31', 'ad34', 'ad21', 'ad29']}/>
 
 <Row>
 
